Created new Vagrant process for setting up a dev environment.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@ assets/tmp/*
 !assets/tmp/.gitkeep
 assets/waivers/*
 !assets/waivers/.gitkeep
+db_created
+db_migrated
+admin_created
+admin-setup.sql
+.vagrant
