--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "php": ">=5.5.9",
     "laravel/framework": "5.2.*",
     "rcrowe/twigbridge": "^0.9.1",
-    "laravelcollective/html": "^5.2"
+    "laravelcollective/html": "^5.2",
+    "predis/predis": "^1.1"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
